# gridironrail

./: .gitignore  AUDIT_README_NORTHSTAR.md  NORTHSTAR.md  NORTHSTAR_FOOTBALL.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/grs/: cli.py  ui_app.py
src/grs/contracts/: __init__.py  types.py
src/grs/core/: __init__.py  difficulty.py  errors.py  events.py  ids.py  randomness.py  strict_policy.py
src/grs/devtools/: __init__.py  calibration_gateway.py  strict_audit.py
src/grs/export/: service.py
src/grs/football/: __init__.py  calibration.py  coaching.py  comparison.py  contest.py  contract_audit.py  injury.py  matchup.py  models.py  packages.py  resolver.py  resources.py  session.py  traits.py  validation.py
src/grs/modding/: __init__.py  data_pack.py
src/grs/org/: __init__.py  bootstrap.py  engine.py  entities.py  perception.py  resources.py  schedule.py  setup.py
src/grs/persistence/: __init__.py  duckdb_store.py  etl.py  migrations.py  profile_store.py  retention.py  sqlite_store.py
src/grs/resources/football/: assignment_templates.json  coaching_policies.json  concepts_defense.json  concepts_offense.json  formations.json  personnel_packages.json  playbook_entries.json  rules_profiles.json  (+2 more)
src/grs/simulation/: __init__.py  dynasty.py  replay.py
src/grs/ui/: __init__.py  charting.py  main_window.py  resources.py
tests/: __init__.py  helpers.py  test_calibration_and_audit.py  test_events.py  test_football.py  test_gap_closure_runtime.py  test_integrity_force.py  test_no_legacy_paths.py  test_org.py  test_org_setup.py  test_persistence_export.py  test_presim_validation.py  test_prototype_cutover.py  test_runtime_replay.py  test_strict_audit.py  test_trait_weighted_baseline.py
(+2 files in other folders)
