[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grs"
version = "0.1.0"
description = "Gridiron Rail: Sundays 1.0 skeleton"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "PySide6",
  "numpy",
  "pandas",
  "duckdb",
  "pyarrow",
  "matplotlib",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "mypy",
  "ruff",
  "pyinstaller",
]

[project.scripts]
grs = "grs.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
grs = ["py.typed", "resources/**/*.json"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
packages = ["grs"]
check_untyped_defs = true
warn_unused_ignores = true
